--- a/HoiThao/HoiThao.Web/Views/Home/Index.cshtml
+++ b/HoiThao/HoiThao.Web/Views/Home/Index.cshtml
@@ -2,6 +2,17 @@
     ViewBag.Title = "Home Page";
 }
 
+@section scripts{
+    <script src="~/Assets/Admin/js/User/bootbox.min.js"></script>
+    <script src="~/Assets/Admin/js/User/mustache.min.js"></script>
+    <script src="~/Assets/Admin/js/User/jquery.twbsPagination.min.js"></script>
+    <script src="~/Assets/Admin/js/User/jquery.validate.min.js"></script>
+    <script src="~/Assets/Admin/js/Layout/layoutController.js"></script>
+    <link href="~/Assets/Admin/css/user.css" rel="stylesheet" />
+
+
+}
+
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
