more click and hotel

--- a/HoiThao/HoiThao.Web/Assets/Admin/css/user.css
+++ b/HoiThao/HoiThao.Web/Assets/Admin/css/user.css
@@ -1,3 +1,12 @@
-﻿.error{
-    color:red;
+﻿.error {
+    color: red;
 }
+.tblAsean .cursor-pointer:hover {
+    background-color: #3E5C9A;
+}
+.cursor-pointer{
+    cursor: pointer;
+    color: red;
+}
+
+
