--- a/HoiThao/HoiThao.Web/Views/Home/Index.cshtml
+++ b/HoiThao/HoiThao.Web/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 @section scripts{
-    <script src="~/Assets/Admin/js/User/bootbox.min.js"></script>
+    @*<script src="~/Assets/Admin/js/User/bootbox.min.js"></script>*@
     <script src="~/Assets/Admin/js/User/mustache.min.js"></script>
     <script src="~/Assets/Admin/js/User/jquery.twbsPagination.min.js"></script>
     <script src="~/Assets/Admin/js/User/jquery.validate.min.js"></script>
@@ -104,7 +104,7 @@
             <td>{{email}}</td>
             <td>{{tel}}</td>
             <td>{{country}}</td>
-            <td>{{payment}}</td>
+            <td class="payment">{{payment}}</td>
             <td>{{amount}}</td>
             <td>{{bankfee}}</td>
             <td>{{mop}}</td>
@@ -129,9 +129,216 @@
 @RenderPage("_AddUpdateModal.cshtml")
 
 
-<div class="panel panel-default">
+<div class="panel panel-sg">
     <div class="panel-heading">
-        <h4>Serives</h4>
+        <h4>Services</h4>
+    </div>
+    <div class="row panel-body">
+        <!-- Left col -->
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Hotel</h4>
+                </div>
+                <table class="table table-bordered tblHotel">
+                    <thead>
+                        <tr>
+                            <th>Hotel</th>
+                            <th>Check in</th>
+                            <th>Check out</th>
+                            <th>Price</th>
+                            <th>Booking inf</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Hotel"></td>
+                            <td id="HotelCheckin"></td>
+                            <td id="HotelChceckout"></td>
+                            <td id="HotelPrice"></td>
+                            <td id="HotelBookingInf"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <hr />
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Transfer - Airport to hotel</h4>
+                </div>
+
+                <table class="table table-hover">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>Vehicle</th>
+                            <th>Pax</th>
+                            <th>Arr</th>
+                            <th>Flg no</th>
+                            <th>Go with</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Vehicle"></td>
+                            <td id="Pax"></td>
+                            <td id="At"></td>
+                            <td id="FlgNo"></td>
+                            <td id="dikem"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Transfer - Hotel to airport</h4>
+                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Vehicle</th>
+                            <th>Pax</th>
+                            <th>Dep</th>
+                            <th>Flg no</th>
+                            <th>Go with</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Vehicle1"></td>
+                            <td id="Pax1"></td>
+                            <td id="Dep"></td>
+                            <td id="FlgNo1"></td>
+                            <td id="dikem1"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Air ticket - Y class</h4>
+                </div>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Rout</th>
+                            <th>Pax</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Ydate"></td>
+                            <td id="Yrout"></td>
+                            <td id="Ypax"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Air ticket - X class</h4>
+                </div>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Rout</th>
+                            <th>Pax</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Xdate"></td>
+                            <td id="Xrout"></td>
+                            <td id="Xpax"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Private information</h4>
+                </div>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Address</th>
+                            <th>Department</th>
+                            <th>Institution</th>
+                            <th>Group</th>
+                            <th>Note</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Address"></td>
+                            <td id="Department"></td>
+                            <td id="Institution"></td>
+                            <td id="Group"></td>
+                            <td id="Note"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <hr />
+
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    @*<h4>Private information</h4>*@
+                </div>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Full delegate</th>
+                            <th>Price</th>
+                            <th>Resident</th>
+                            <th>Price</th>
+                            <th>Accompany person</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="FullDelegate"></td>
+                            <td id="FullPrice"></td>
+                            <td id="Resident"></td>
+                            <td id="ResidentPrice"></td>
+                            <td id="AccompanyPerson"></td>
+                            <td id="AccompanyPersonPrice"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+    </div>
+</div>
+
+<div class="panel panel-sg">
+    <div class="panel-heading">
+        <h4>Tour info</h4>
     </div>
     <div class="row panel-body">
         <!-- Left col -->
@@ -140,44 +347,16 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Hotel</th>
-                        <th>Check in</th>
-                        <th>Check out</th>
-                        <th>Price</th>
-                        <th>Booking inf</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td id="Hotel"></td>
-                        <td id="HotelCheckin"></td>
-                        <td id="HotelChceckout"></td>
-                        <td id="HotelPrice"></td>
-                        <td id="HotelBookingInf"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-
-        <section class="col-lg-12 connectedSortable ui-sortable">
-            Transfer - Airport to hotel
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Vehicle</th>
+                        <th>Tour</th>
+                        <th>Date</th>
                         <th>Pax</th>
-                        <th>Arr</th>
-                        <th>Flg no</th>
-                        <th>Go with</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td id="Vehicle"></td>
-                        <td id="Pax"></td>
-                        <td id="At"></td>
-                        <td id="FlgNo"></td>
-                        <td id="dikem"></td>
+                        <td id="Tour"></td>
+                        <td id="TourDate"></td>
+                        <td id="TourPax"></td>
                     </tr>
                 </tbody>
             </table>
