--- a/HoiThao/HoiThao.Web/Views/Shared/_Layout.cshtml
+++ b/HoiThao/HoiThao.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
+    <link href="~/Assets/Admin/css/navbar.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -12,66 +13,60 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
                 <div class="logo">
                     <a href="/">
                         <img src="/Content/image/logo-color-big1.png" alt="logo" />
                     </a>
                 </div>
             </div>
-            <div class="navbar-collapse collapse">
+
+            <div class="collapse navbar-collapse">
+                
                 <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Report <b class="caret"></b></a>
+                        <ul class="dropdown-menu multi-level">
 
-                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
 
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Report <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Conference</a></li>
-                            <li><a href="#">Workshop</a></li>
-                            <li><a href="#">Conference group by country</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Invited guests</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Received payment</a></li>
 
-                            <li><a href="#">Pickup at the airport</a></li>
-                            <li><a href="#">See off at the airport</a></li>
-                            <li><a href="#">Buy air ticket</a></li>
+                            <li><a id="Conference" href="#">Conference</a></li>
+                            <li><a id="Workshop" href="#">Workshop</a></li>
+                            <li><a id="ConferenceGroupByCountry" href="#">Conference group by country</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Tour</a></li>
+                            <li><a id="InvitedGuests" href="#">Invited guests</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a id="DReceived paymnet" href="#">Received payment</a></li>
+                            <li><a id="PickupAtTheAirport" href="#">Pickup at the airport</a></li>
+                            <li><a id="SeeOffAtTheAirport" href="#">See off at the airport</a></li>
+                            <li><a id="BuyAirTicket" href="#">Buy air ticket</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a id="Tour" href="#">Tour</a></li>
                             <li role="separator" class="divider"></li>
 
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hotel <span class="caret"></span></a>
+                            <li class="dropdown-submenu">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hotel</a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Conference</a></li>
-                                    <li><a href="#">Workshop</a></li>
-                                    <li><a href="#">Conference group by country</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Invited guests</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Received payment</a></li>
-
-                                    <li><a href="#">Pickup at the airport</a></li>
-                                    <li><a href="#">See off at the airport</a></li>
-                                    <li><a href="#">Buy air ticket</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Tour</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="#">Hotel</a></li>
+                                    <li><a id="Furama" href="#">Furama</a></li>
+                                    <li><a id="Sea" href="#">Sea</a></li>
+                                    <li><a id="MuongThanh" href="#">Muong thanh</a></li>
+                                    <li><a id="Titan" href="#">Titan</a></li>
+                                    <li><a id="Equatorial" href="#">Equatorial</a></li>
+                                    <li><a id="Sheraton" href="#">Sheraton</a></li>
+                                    <li><a id="Other" href="#">Other</a></li>
                                 </ul>
                             </li>
 
-                            <li><a href="#">Checkin list</a></li>
-                            <li><a href="#">VAT bill</a></li>
-                            <li><a href="#">On site list</a></li>
-                            <li><a href="#">Speaker</a></li>
+                            <li><a id="CheckinList" href="#">Checkin list</a></li>
+                            <li><a id="VatBill" href="#">VAT bill</a></li>
+                            <li><a id="OnSiteList" href="#">On site list</a></li>
+                            <li><a id="Speaker" href="#">Speaker</a></li>
+
+
 
                         </ul>
                     </li>
@@ -79,8 +74,16 @@
                     <li><a href="#" id="ImportData">Import data</a></li>
                 </ul>
             </div>
+            <!--/.nav-collapse -->
         </div>
     </div>
+
+
+
+
+
+
+
     <div class="container body-content">
         @RenderBody()
         <hr />
