--- a/HoiThao/HoiThao.Web/Assets/Admin/css/user.css
+++ b/HoiThao/HoiThao.Web/Assets/Admin/css/user.css
@@ -1,18 +1,20 @@
 ﻿.error {
     color: red;
 }
+
 .tblAsean .cursor-pointer:hover {
     background-color: #3E5C9A;
-}
-.cursor-pointer{
     cursor: pointer;
-    color: red;
-}
-.paid{
-    background:red;
 }
 
+.cursor-pointer {
+    /*cursor: pointer;
+    color: black;*/
+}
+/*.paid{
+    background:red;
+}*/
 
 .hoverClass {
-    background-color: #3E5C9A;
+    color: red;
 }
