--- a/HoiThao/HoiThao.Web/Views/Home/Index.cshtml
+++ b/HoiThao/HoiThao.Web/Views/Home/Index.cshtml
@@ -93,7 +93,10 @@
                     <button class="btn btn-outline btn-primary btn-xs btn-edit" data-kId="{{kId}}" title="Edit"><i class="fa fa-edit"></i></button>
                     <button class="btn btn-outline btn-danger btn-xs btn-delete" data-kId="{{kId}}" title="Delete"><i class="fa fa-trash"></i></button>@*<i class="fa fa-trash" aria-hidden="true"></i>*@
                     <button class="btn btn-outline btn-dark btn-xs btn-PrintReceipt" data-kId="{{kId}}" title="Print receipt"><i class="fas fa-receipt"></i></button>
-                    <button class="btn btn-outline btn-dark btn-xs btn-PrintReceipt" data-kId="{{kId}}" title="Print VAT"><i class="fas fa-print"></i></button>
+                    <button class="btn btn-outline btn-dark btn-xs btn-PrintVAT" data-kId="{{kId}}" title="Print VAT"><i class="fas fa-print"></i></button>
+                    <button class="btn btn-outline btn-dark btn-xs btn-PrintBadge" data-kId="{{kId}}" title="Print Badge"><i class="fas fa-id-badge"></i></button>
+                    <button class="btn btn-outline btn-dark btn-xs btn-PrintCertificate" data-kId="{{kId}}" title="Print Certificate"><i class="fas fa-address-card"></i></button>
+                    
                 </div>
             </td>
 
