fix account, homeController

--- a/HoiThao/HoiThao.Web/Views/Shared/_Layout.cshtml
+++ b/HoiThao/HoiThao.Web/Views/Shared/_Layout.cshtml
@@ -51,14 +51,14 @@
                             <li class="dropdown-submenu">
                                 <a href="#" id="HotelList" class="dropdown-toggle" data-toggle="dropdown">Hotel</a>
                                 @*<ul class="dropdown-menu">
-                                        <li><a  href="/Report/Furama">Furama</a></li>
-                                        <li><a  href="/Report/Sea">Sea</a></li>
-                                        <li><a  href="/Report/MuongThanh">Muong thanh</a></li>
-                                        <li><a  href="/Report/Titan">Titan</a></li>
-                                        <li><a  href="/Report/Equatorial">Equatorial</a></li>
-                                        <li><a  href="/Report/Sheraton">Sheraton</a></li>
-                                        <li><a  href="/Report/Other">Other</a></li>
-                                    </ul>*@
+                        <li><a  href="/Report/Furama">Furama</a></li>
+                        <li><a  href="/Report/Sea">Sea</a></li>
+                        <li><a  href="/Report/MuongThanh">Muong thanh</a></li>
+                        <li><a  href="/Report/Titan">Titan</a></li>
+                        <li><a  href="/Report/Equatorial">Equatorial</a></li>
+                        <li><a  href="/Report/Sheraton">Sheraton</a></li>
+                        <li><a  href="/Report/Other">Other</a></li>
+                    </ul>*@
                             </li>
 
                             <li><a @*id="CheckinList"*@ href="/Report/CheckinList">Checkin list</a></li>
@@ -72,6 +72,7 @@
                     </li>
 
                     <li><a href="#" id="ImportData">Import data</a></li>
+                    <li><a href="/Account" id="account">Account</a></li>
                     <li><a href="/Print/AseanReportDemo">Reports Demo</a></li>
                 </ul>
             </div>
