--- a/HoiThao/HoiThao.Web/Views/Home/Index.cshtml
+++ b/HoiThao/HoiThao.Web/Views/Home/Index.cshtml
@@ -14,7 +14,10 @@
         table {
             table-layout: fixed;
         }
-        
+
+        .hoverClass {
+            background-color: #3E5C9A;
+        }
     </style>
 }
 <br />
@@ -86,7 +89,7 @@
 
 
     <script id="data-template" type="x-tmpl-mustache">
-       
+
         <tr class="aseanTr cursor-pointer" data-kId="{{kId}}" style="color:black">
 
             <td>
@@ -135,8 +138,249 @@
 </div>
 @RenderPage("_AddUpdateModal.cshtml")
 
+<ul class="nav nav-tabs">
+    <li class="active"><a data-toggle="tab" href="#services">Services</a></li>
+    <li><a data-toggle="tab" href="#infomation">Infomation</a></li>
+    <li><a data-toggle="tab" href="#tourInfo">Tour info</a></li>
+</ul>
 
-<div class="panel panel-sg">
+<div class="tab-content">
+    <div id="services" class="tab-pane fade in active">
+        <!-- Left col -->
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Hotel</h4>
+                </div>
+                <table class="table table-bordered tblHotel">
+                    <thead>
+                        <tr>
+                            <th>Hotel</th>
+                            <th>Check in</th>
+                            <th>Check out</th>
+                            <th>Price</th>
+                            <th>Booking inf</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Hotel"></td>
+                            <td id="HotelCheckin"></td>
+                            <td id="HotelChceckout"></td>
+                            <td id="HotelPrice"></td>
+                            <td id="HotelBookingInf"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <hr />
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Transfer - Airport to hotel</h4>
+                </div>
+
+                <table class="table table-hover">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>Vehicle</th>
+                            <th>Pax</th>
+                            <th>Arr</th>
+                            <th>Flg no</th>
+                            <th>Go with</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Vehicle"></td>
+                            <td id="Pax"></td>
+                            <td id="At"></td>
+                            <td id="FlgNo"></td>
+                            <td id="dikem"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Transfer - Hotel to airport</h4>
+                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Vehicle</th>
+                            <th>Pax</th>
+                            <th>Dep</th>
+                            <th>Flg no</th>
+                            <th>Go with</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Vehicle1"></td>
+                            <td id="Pax1"></td>
+                            <td id="Dep"></td>
+                            <td id="FlgNo1"></td>
+                            <td id="dikem1"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Air ticket - Y class</h4>
+                </div>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Rout</th>
+                            <th>Pax</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Ydate"></td>
+                            <td id="Yrout"></td>
+                            <td id="Ypax"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Air ticket - X class</h4>
+                </div>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Rout</th>
+                            <th>Pax</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Xdate"></td>
+                            <td id="Xrout"></td>
+                            <td id="Xpax"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+    </div>
+
+    <div id="infomation" class="tab-pane fade">
+        <!-- Left col -->
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h4>Private information</h4>
+                </div>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Address</th>
+                            <th>Department</th>
+                            <th>Institution</th>
+                            <th>Group</th>
+                            <th>Note</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Address"></td>
+                            <td id="Department"></td>
+                            <td id="Institution"></td>
+                            <td id="Group"></td>
+                            <td id="Note"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <hr />
+
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    @*<h4>Private information</h4>*@
+                </div>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Full delegate</th>
+                            <th>Price</th>
+                            <th>Resident</th>
+                            <th>Price</th>
+                            <th>Accompany person</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="FullDelegate"></td>
+                            <td id="FullPrice"></td>
+                            <td id="Resident"></td>
+                            <td id="ResidentPrice"></td>
+                            <td id="AccompanyPerson"></td>
+                            <td id="AccompanyPersonPrice"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+    </div>
+
+    <div id="tourInfo" class="tab-pane fade">
+        <!-- Left col -->
+        <section class="col-lg-12 connectedSortable ui-sortable">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    @*<h4>Private information</h4>*@
+                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Tour</th>
+                            <th>Date</th>
+                            <th>Pax</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="Tour"></td>
+                            <td id="TourDate"></td>
+                            <td id="TourPax"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+    </div>
+</div>
+
+@*<div class="panel panel-sg">
     <div class="panel-heading">
         <h4>Services</h4>
     </div>
@@ -313,61 +557,61 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     @*<h4>Private information</h4>*@
+@*</div>
+
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Full delegate</th>
+                                <th>Price</th>
+                                <th>Resident</th>
+                                <th>Price</th>
+                                <th>Accompany person</th>
+                                <th>Price</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td id="FullDelegate"></td>
+                                <td id="FullPrice"></td>
+                                <td id="Resident"></td>
+                                <td id="ResidentPrice"></td>
+                                <td id="AccompanyPerson"></td>
+                                <td id="AccompanyPersonPrice"></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
+            </section>
+
+        </div>
+    </div>
+
+    <div class="panel panel-sg">
+        <div class="panel-heading">
+            <h4>Tour info</h4>
+        </div>
+        <div class="row panel-body">
+            <!-- Left col -->
+            <section class="col-lg-12 connectedSortable ui-sortable">
 
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Full delegate</th>
-                            <th>Price</th>
-                            <th>Resident</th>
-                            <th>Price</th>
-                            <th>Accompany person</th>
-                            <th>Price</th>
+                            <th>Tour</th>
+                            <th>Date</th>
+                            <th>Pax</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td id="FullDelegate"></td>
-                            <td id="FullPrice"></td>
-                            <td id="Resident"></td>
-                            <td id="ResidentPrice"></td>
-                            <td id="AccompanyPerson"></td>
-                            <td id="AccompanyPersonPrice"></td>
+                            <td id="Tour"></td>
+                            <td id="TourDate"></td>
+                            <td id="TourPax"></td>
                         </tr>
                     </tbody>
                 </table>
-            </div>
-        </section>
+            </section>
 
-    </div>
-</div>
-
-<div class="panel panel-sg">
-    <div class="panel-heading">
-        <h4>Tour info</h4>
-    </div>
-    <div class="row panel-body">
-        <!-- Left col -->
-        <section class="col-lg-12 connectedSortable ui-sortable">
-
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Tour</th>
-                        <th>Date</th>
-                        <th>Pax</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td id="Tour"></td>
-                        <td id="TourDate"></td>
-                        <td id="TourPax"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-
-    </div>
-</div>
+        </div>
+    </div>*@
